// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput default read only text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-readonly"
  >
    <input
      aria-invalid="false"
      aria-label="default read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:r9:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only default"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput disabled text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-disabled"
  >
    <input
      aria-invalid="false"
      aria-label="disabled text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:r5:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      disabled=""
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput invalid text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-error"
  >
    <input
      aria-invalid="true"
      aria-label="invalid text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:rd:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
          />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TextInput plain read only text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-readonly pf-m-plain"
  >
    <input
      aria-invalid="false"
      aria-label="plain read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:rb:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only plain"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput read only text input using isReadOnly 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-readonly"
  >
    <input
      aria-invalid="false"
      aria-label="read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:r7:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput simple text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <input
      aria-invalid="false"
      aria-label="simple text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:r3:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput validated text input error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-error"
  >
    <input
      aria-invalid="true"
      aria-label="validated text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-:rj:"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
          />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;
